appId: com.mobileautomationpoc
---
- runScript: setup-cart.js

- launchApp:
    clearState: true
- tapOn: "Username"
- inputText: "admin"
- tapOn: "Password"
- inputText: "password"
- tapOn: "Log In"

- tapOn: "🛒"
- assertVisible: "Your Cart"

- tapOn: "maestro_e2e_cart"
- assertVisible: "Loaded cart: maestro_e2e_cart"

- tapOn: "Checkout Cart"
- assertVisible: "Order ID: ORD-.*"
