appId: com.mobileautomationpoc
---
- launchApp
- assertVisible: "Login"
- tapOn: "Username"
- inputText: "admin"
- tapOn: "Password"
- inputText: "password"
- tapOn: "Log In"
- assertVisible: "Awesome Shop"
- tapOn:
    id: "logout-button"
- assertVisible: "Awesome Shop Login"
