appId: com.mobileautomationpoc
---
- setAirplaneMode: disabled
- launchApp:
    clearState: true
- assertVisible: "Username"
- tapOn: "Username"
- inputText: "admin"
- tapOn: "Password"
- inputText: "password"
- tapOn: "Log In"

- assertVisible: "Featured Products"
- setAirplaneMode: enabled
- stopApp
- launchApp
- assertVisible: "Network Connection Lost"
- assertVisible: "Please check your connection and try again."
- setAirplaneMode: disabled
